# KGClaw

./: .gitignore  LICENSE  README.md  README.zh.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  TECHNICAL_OVERVIEW.md
kgclaw/: __init__.py  agent.py  cli.py  config.py  git_manager.py  i18n.py  interactive_app.py  loaders.py  logger.py  memory.py  models.py  ontology_builder.py  refinement.py  sandbox.py  tracer.py  utils.py
kgclaw/harness/: __init__.py  engine.py  helpers.py  phases.py  strategies.py
kgclaw/locales/en/LC_MESSAGES/: kgclaw.po
kgclaw/presets/: __init__.py  kochet.py  nyt_repo.py  rebel.py  sredfm.py  webnlg.py  wiki_nre.py
kgclaw/prompts/: system_prompts.py
kgclaw/skills/: __init__.py  builtins.py
kgclaw/tools/: __init__.py  agent_tools.py  extraction_tools.py  file_tools.py  text_tools.py  validation_tools.py
kgclaw/ui/: __init__.py  display.py  progress.py
tests/: test_cli_and_harness.py  test_document_mgmt.py  test_git_manager.py  test_integration.py  test_loaders.py  test_memory_extended.py  test_ontology_builder.py  test_refinement.py  test_sandbox.py
